css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "system-ui";
  color: black;
}
.header > p:nth-child(1) {
  display: flex;
  justify-content: center;
  max-width: 100%;
  height: auto;
}

#hs-1 {
  margin-top: 2%;
}
#nav-0 {
  font-size: 200%;
}
#nav-1,
#nav-2 {
  font-size: 150%;
  font-weight: bold;
  text-align: left;
  color: black;
}

/* The Best film hero image */
.hero-parent {

  /* Set a specific height */
  height: 50%;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  /* position: relative; */
  width: 95%;
  display: flex;
  flex-direction: row;
  margin: 5% auto;
}
.hero-child{

  /* Set a specific height */
  height: 50%;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-child img {
background-color: black;
}
.hero-button  {
background-color: grey;
}


/* Carousel */

.carousel-parent {
  font-size: 200%;
  font-weight: bold;
  text-align: start;
  color: gray;
  width: 60%;
}

.carousel {
  position: relative;
  /* overflow: hidden; */
}
.carousel__container {
  overflow-x: hidden;
}
.carousel__container::after {
  content: "";
  clear: both;
  display: table;
}
.carousel__item {
  position: relative;
  float: left;
}
.carousel__item img {
  display: block;
  width: 85%;
  margin: auto;
  height: auto;
}
.carousel__item img:focus,
.carousel__item img:hover {
  transform: scale(1.1);
}

.carousel__next,
.carousel__prev {
  position: absolute;
  width: 40px;
  height: 40px;
  background: #fff url(../assets/chevron-right.svg) center center no-repeat;
  background-size: 30px 30px;
  border-radius: 50%;
  /* put the arrow button where it is smart to use */
  /* top: 50%; */
  margin-top: -15px;
  right: -5px;
  cursor: pointer;
  transition: transform 0.3s, opacity 0.3s;
}
.carousel__next:hover,
.carousel__prev:hover {
  transform: scale(1.2);
}
.carousel__next--hidden,
.carousel__prev--hidden {
  opacity: 0;
}

.carousel__prev {
  background-image: url(../assets/chevron-left.svg);
  margin: 5px;
  left: -5px;
}

.categories__title {
  display: none;
}

.category {
  width: 100%;
}
.category__title {
  width: 80%;
  font-size: 2em;
  margin: auto;
  padding-top: 20px;
  text-align: left;
}
.category__carousel {
  width: 80%;
  display: flex;
  flex-direction: row;
  margin: auto;
  align-items: center;
}
.category__carousel :nth-child(1) {
  order: 2;
}
.category__carousel :nth-child(2) {
  order: 3;
}
.category__carousel :nth-child(3) {
  order: 1;
}

/* modal by grafikart */

/* pour retirer les valeurs imposées par les navigateurs */
/* .body, .html {
  margin:0;
  padding:0;
} */

/* padding pris en compte dans le calcul des largeurs pour tous les élements */
* {
  box-sizing: border-box;
}

/* *:focus {
  box-shadow: 0 0 10px blue;
} */

.modal {
  /* modal prend toute la place */
  position: fixed;
  /* pour centrer la boite modal, flexbox */
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* rendre le contenu sous modal moins visible */
  background: rgba(0, 0, 0, 0.6);
}

/* le conteneur des informations */
.modal-wrapper {
  /* faire apparaitre scroll sur périphérique de petite taille */
  overflow: auto;
  width: 600px;
  /* pour que le contenu ne débordre pas selon la taille du type d'écran responsive */
  max-width: calc(100vw-20px);
  max-height: 80vh;
  /* max-height: calc(100vh-20px); */
  /* pour aérer le contenu dans le wrapper */
  padding: 20px;
  /* fond de couleur blanche */
  background: white;
}

.modal-header{
  font-size: 40px; 
}
.modal-info{
  margin-top: 0px;
  overflow: auto;
  position: relative;
}

.modal-info > img:nth-child(1) {
  float: left; 
  margin: 5px;
  
}

.modal-info > p:nth-child(2) {
  margin-top: 10px;
}

.modal-info p {
  font-weight:bold
}
/* 
.modal-info a {
  font-size: 25px; 
} */
.modal-details{
  margin-top: 20px;
}
.modal-details p {
  font-weight:bold
}

